fix layout bug

--- a/app/assets/stylesheets/test_runs.css.sass
+++ b/app/assets/stylesheets/test_runs.css.sass
@@ -11,7 +11,8 @@ $tree-width: 350px
     overflow: scroll
     // position: fixed
   #detail_view
-    padding-left: $tree-width + 20px
+    // padding-left: $tree-width + 20px
+    padding-left: 20px
     padding-right: 20px
     height: 100%
     overflow: scroll
